--- a/TimeTracker-ng4/app/app/app.component.html
+++ b/TimeTracker-ng4/app/app/app.component.html
@@ -1,7 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-    <todos></todos>
+<div class="margin-top-20">
+  <router-outlet></router-outlet>
 </div>
