--- a/TimeTracker-ng4/Content/Site.css
+++ b/TimeTracker-ng4/Content/Site.css
@@ -27,4 +27,6 @@ a.no-decor{text-decoration: none}
 .display-box-item{flex-grow: 1;margin: 0 10px}
 .display-box-item:first-child{flex:0 0 70%}
 
-
+.drag-handle {    margin-right: 10px;    font: bold 20px Sans-Serif;color: #5F9EDF;    display: inline-block;cursor: move;cursor: -webkit-grabbing;}
+.sortable-ghost {opacity: .2;background-color: #5F9EDF}
+		
