--- a/TimeTracker-ng4/app/app/todo/todo.component.html
+++ b/TimeTracker-ng4/app/app/todo/todo.component.html
@@ -64,6 +64,7 @@
 
 					<div class="col-md-6">
 						<button class="btn btn-success" (click)="saveTodo()" [disabled]="editForm.invalid">Save</button>
+						<a [routerLink]="['/']"  class="btn btn-default" >Cancel</a>
 					</div>
 				</div>
 			</form>
