Some additional cleanup

--- a/TimeTracker-ng4/Content/Site.css
+++ b/TimeTracker-ng4/Content/Site.css
@@ -29,4 +29,22 @@ a.no-decor{text-decoration: none}
 
 .drag-handle {    margin-right: 10px;    font: bold 20px Sans-Serif;color: #5F9EDF;    display: inline-block;cursor: move;cursor: -webkit-grabbing;}
 .sortable-ghost {opacity: .2;background-color: #5F9EDF}
-		
+        
+/* .new-todo{ margin-bottom: 8px;}
+.todo li{ color: white; }
+.todo .p-0  { background: #ff0000; }
+.todo .p-1  { background: #FF4600;}
+.todo .p-2  { background: #FF5000;}
+.todo .p-3  { background: #FF5a00;}
+.todo .p-4  { background: #FF6400;}
+.todo .p-5  { background: #FF6e00;}
+.todo .p-6  { background: #FF7800;}
+.todo .p-7  { background: #FF8200;}
+.todo .p-8  { background: #FF8c00;}
+.todo .p-9  {background: #FF9600}
+.todo .p-10 {background: #FFa000}
+.todo .p-11 {background: #FFaa00}
+.todo .p-12 {background: #FFb400}
+.todo .p-13 {background: #FFbe00}
+.todo .p-14 {background: #FFc800} */
+
