--- a/TimeTracker-ng4/Views/Shared/_Layout.cshtml
+++ b/TimeTracker-ng4/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Time Tracker</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -30,8 +30,11 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <footer class="navbar navbar-default navbar-fixed-bottom">
+            <div class="container">
+                <p class="navbar-brand">&copy; @DateTime.Now.ToLongDateString() @DateTime.Now.ToShortTimeString()</p>    
+            </div>
+            
         </footer>
     </div>
 
