--- a/TimeTracker-ng4/app/app/todo/todo.component.html
+++ b/TimeTracker-ng4/app/app/todo/todo.component.html
@@ -9,14 +9,18 @@
 
 <hr>
 <div class="alert alert-success" *ngIf="isSuccess">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<strong>Successfully Saved</strong>
-		Data saved successfuly
-	
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
+	<strong>Successfully Saved</strong>
+	Data saved successfuly
+
 </div>
 
 <div class="alert alert-danger" *ngIf="isError">
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span>
+	</button>
 	{{errorMessage}}
 </div>
 
@@ -37,7 +41,12 @@
 					<div class="col-md-2">
 						<input type="number" name="minutesSpent" [(ngModel)]="todo.minutesSpent" class="form-control">
 					</div>
-
+					<button class="btn btn-default " (click)="startTodo()">
+					
+							<span>
+								<i class="glyphicon glyphicon-play"></i>
+							</span>
+						</button>
 				</div>
 				<div class="form-group">
 					<label class="col-md-2">Priority</label>
@@ -45,6 +54,18 @@
 						<input type="text" name="priority" [(ngModel)]="todo.priority" class="form-control">
 					</div>
 				</div>
+				<div class="form-group">
+					<label class="col-md-2">Start Date</label>
+					<div class="col-md-4">
+						<input type="text" readonly value="{{todo.starDate}}" class="form-control">
+					</div>
+				</div>
+				<div class="form-group">
+						<label class="col-md-2">Completed Date</label>
+						<div class="col-md-4">
+							<input type="text" readonly value="{{todo.endDate|date:'medium'}}" class="form-control">
+						</div>
+					</div>
 
 				<div class="form-group">
 					<div class="col-md-2">
@@ -63,8 +84,28 @@
 					</div>
 
 					<div class="col-md-6">
-						<button class="btn btn-success" (click)="saveTodo()" [disabled]="editForm.invalid">Save</button>
-						<a [routerLink]="['/']"  class="btn btn-default" >Cancel</a>
+			
+							
+							<button class="btn btn-success " (click)="saveTodo()" [disabled]="editForm.invalid">
+								Save
+								<span>
+									<i class="glyphicon glyphicon-floppy-disk"></i>
+								</span>
+							</button>
+							<button class="btn btn-danger " (click)="deleteTodo()">
+								Delete
+								<span>
+									<i class="glyphicon glyphicon-trash"> </i>
+								</span>
+							</button>
+							<a [routerLink]="['/']" class="btn btn-default">
+								Cancel
+								<span>
+									<i class="glyphicon glyphicon-remove"></i>
+								</span>
+							</a>
+				
+
 					</div>
 				</div>
 			</form>
