--- a/TimeTracker-ng4/app/app/todo/todoList.component.html
+++ b/TimeTracker-ng4/app/app/todo/todoList.component.html
@@ -1,24 +1,44 @@
-﻿<div class="display-box">
-	<!--<ul class="list-group display-box-item">
-        <li class="list-group-item active">Todos</li>		    
-    </ul>-->
-
-	<ul class="list-group display-box-item" [sortablejs]="todos" [sortablejsOptions]="sortOptions">
-
-		<li class="list-group-item" *ngFor="let t of todos">
+﻿<div class="panel-heading text-right">
+	<button class="btn btn-sm btn-info" (click)="showAllToDos()">Show All</button>
+</div>
+<div class="display-box">
+	<ul class="list-group display-box-item todo" [sortablejs]="todos" [sortablejsOptions]="sortOptions">
+		<li class="list-group-item  p-{{i}}" *ngFor="let t of todos; let i = index">
 			<!-- <span class="badge">8 </span> -->
 			<div class="row">
-				<div class="col-md-10">
-					<span class="drag-handle">☰</span>
-					{{t.title}}
+
+				<div *ngIf="t.isCompleted else elseBlock">
+					<div class="col-sm-9 col-xs-6">
+						<s>{{t.title}}</s>
+					</div>
+					<div class="col-sm-3 col-xs-6 text-right">
+						<a [routerLink]="['./todo',t.id]" class="no-decor" class="btn btn-sm btn-default">
+							<span>
+								<i class="icon-larger glyphicon glyphicon-pencil"></i>
+							</span>
+						</a>
+					</div>
 				</div>
-				<div class="col-md-2 text-right">
-					<a [routerLink]="['./todo',t.id]" class="no-decor">
-						<span>
-							<i class="icon-larger glyphicon glyphicon-pencil"></i>
-						</span>
-					</a>
-				</div>
+
+				<ng-template #elseBlock>
+					<div class="col-sm-9 col-xs-6">
+						<span class="drag-handle">☰</span> {{t.title}}
+					</div>
+					<div class="col-sm-3 col-xs-6 text-right">
+						<a [routerLink]="['./todo',t.id]" class="no-decor" class="btn btn-sm btn-default">
+							<span>
+								<i class="icon-larger glyphicon glyphicon-pencil"></i>
+							</span>
+						</a>
+
+						<a (click)="markAsCompleted(t)" class="btn btn-success">
+							<span>
+								<i class="icon-larger glyphicon glyphicon glyphicon-ok "></i>
+							</span>
+						</a>
+
+					</div>
+				</ng-template>
 			</div>
 		</li>
 	</ul>
@@ -28,7 +48,7 @@
 		<div class="panel-body">
 			<form novalidate #addForm="ngForm">
 				<div class="form-group">
-					<input type="text" name="newItem" [(ngModel)]="newToDo.title" #newItem="ngModel" required class="form-control">
+					<textarea name="newItem" [(ngModel)]="newToDo.title" #newItem="ngModel" required class="form-control" rows="5"></textarea>
 					<div class="text-danger" *ngIf="newItem.touched && newItem.invalid && newItem.errors.required">required!</div>
 				</div>
 				<div class="form-group">
