--- a/TimeTracker-ng4/Views/Shared/_Layout.cshtml
+++ b/TimeTracker-ng4/Views/Shared/_Layout.cshtml
@@ -16,12 +16,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="/" class="navbar-brand">
+                    <i class="glyphicon glyphicon-time"></i> Time Tracker
+                </a>
+
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    
                     <li>@Html.ActionLink("Work", "Work", "App")</li>
                 </ul>
             </div>
@@ -30,12 +34,12 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="navbar navbar-default navbar-fixed-bottom">
+        @*<footer class="navbar navbar-default">
             <div class="container">
                 <p class="navbar-brand">&copy; @DateTime.Now.ToLongDateString() @DateTime.Now.ToShortTimeString()</p>    
             </div>
             
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
