--- a/TimeTracker-ng4/app/app/todo/todo.component.html
+++ b/TimeTracker-ng4/app/app/todo/todo.component.html
@@ -21,7 +21,7 @@
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 	</button>
-	{{errorMessage}}
+	{{errorMessage|json}}
 </div>
 
 <div class="panel panel-primary">
@@ -32,7 +32,7 @@
 				<div class="form-group">
 					<label class="col-md-2">Title</label>
 					<div class="col-md-10">
-						<input type="text" name="title" [(ngModel)]="todo.title" #title="ngModel" required class="form-control">
+						<textarea name="title" [(ngModel)]="todo.title" #title="ngModel" required class="form-control" rows="8"></textarea>
 						<div class="text-danger" *ngIf="title.touched && title.invalid && title.errors.required">required!</div>
 					</div>
 				</div>
@@ -57,7 +57,7 @@
 				<div class="form-group">
 					<label class="col-md-2">Start Date</label>
 					<div class="col-md-4">
-						<input type="text" readonly value="{{todo.starDate}}" class="form-control">
+						<input type="text" readonly value="{{todo.startDate}}" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
