--- a/TimeTracker-ng4/app/app/todo/todoList.component.html
+++ b/TimeTracker-ng4/app/app/todo/todoList.component.html
@@ -3,42 +3,42 @@
 </div>
 <div class="display-box">
 	<ul class="list-group display-box-item todo" [sortablejs]="todos" [sortablejsOptions]="sortOptions">
-		<li class="list-group-item "  [ngClass]="{'active':(!!t.startDate)}"  *ngFor="let t of todos; let i = index">
+		<li class="list-group-item "  [ngClass]="{'list-group-item-info':(!!t.startDate)}"  *ngFor="let t of todos; let i = index">
 			<!-- <span class="badge">8 </span> -->
 			<div class="row ">
 
 				<div *ngIf="t.isCompleted else elseBlock">
-					<div class="col-sm-9 col-xs-6">
-						<s>{{t.title}}</s>
-					</div>
-					<div class="col-sm-3 col-xs-6 text-right">
-						<a [routerLink]="['./todo',t.id]" class="no-decor" class="btn btn-sm btn-default">
+                    <div class="col-sm-9 col-xs-6">
+                        <s>{{t.title}}</s>
+                    </div>
+                    <div class="col-sm-3 col-xs-6 text-right">
+                        <a [routerLink]="['./todo',t.id]" class="no-decor" class="btn btn-sm btn-default">
 							<span>
 								<i class="icon-larger glyphicon glyphicon-pencil"></i>
 							</span>
-						</a>
-					</div>
-				</div>
+                        </a>
+                    </div>
+                </div>
 
-				<ng-template #elseBlock>
-					<div class="col-sm-10 col-xs-6">
-						<span class="drag-handle">☰</span>
-						<span >{{t.title}}</span> 
-					</div>
-					<div class="col-sm-2 col-xs-6 text-right">
-						<a [routerLink]="['./todo',t.id]" class="no-decor" class="btn btn-sm btn-default">
+                    <ng-template #elseBlock>
+                        <div class="col-sm-10 col-xs-6">
+                            <span class="drag-handle">☰</span>
+                            <span >{{t.title}}</span>
+                        </div>
+                        <div class="col-sm-2 col-xs-6 text-right">
+                            <a [routerLink]="['./todo',t.id]" class="no-decor" class="btn btn-sm btn-default">
 							<span>
 								<i class="icon-larger glyphicon glyphicon-pencil"></i>
 							</span>
-						</a>
+                            </a>
 
-						<a (click)="markAsCompleted(t)" class="btn btn-success">
+                            <a (click)="markAsCompleted(t)" class="btn btn-success">
 							<span>
 								<i class="icon-larger glyphicon glyphicon glyphicon-ok "></i>
 							</span>
-						</a>
+                            </a>
 
-					</div>
+                        </div>
 				</ng-template>
 			</div>
 		</li>
